tests/negative/test_decl_cn_arr_not_init.orb
fnc main() () {
    let array:(i32 4 cn);
};